--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,7 @@ jobs:
       uses: actions/checkout@v2
       with:
         ref: ${{steps.get_branch.outputs.branch}}
+        fetch-depth: 0
 
     - name: get previous tag
       run: echo ::set-env name=LATEST_TAG::$(./scripts/git/get_actual_tag.sh)
