--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,8 +57,8 @@ jobs:
         tag_with_ref: false
         tag_with_sha: false
         add_git_labels: true
-        tags: ${{ env.NEXT_TAG }}
-        #push: ${{ startsWith(github.ref, 'refs/tags/') }}
+        tags: latest
+        push: ${{ notStartsWith(steps.get_branch.outputs.branch, 'master') }}
 
 
 
