--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -58,7 +58,7 @@ jobs:
         tag_with_sha: false
         add_git_labels: true
         tags: latest
-        push: ${{ notStartsWith(steps.get_branch.outputs.branch, 'master') }}
+        push: ${{ steps.get_branch.outputs.branch!='master'}}
 
 
 
