--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -64,7 +64,7 @@ jobs:
         image: "${{ github.repository }}-$(. scripts/git/set_docker_image_suffix.sh ${{env.BRANCH}})"
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-        repository: ${{ github.repository }}
+        #repository: ${{ github.repository }}
         tag_with_ref: false
         tag_with_sha: false
         add_git_labels: true
