--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,14 +15,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: get current branch
-      shell: bash
-      run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
-      id: get_branch
+      run: echo ::set-env name=BRANCH::$(echo ${GITHUB_REF#refs/heads/})
+    # - name: get current branch
+    #   shell: bash
+    #   run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+    #   id: get_branch
 
     - name: checkout code from branch
       uses: actions/checkout@v2
       with:
-        ref: ${{steps.get_branch.outputs.branch}}
+        ref: ${{env.BRANCH}}
         fetch-depth: 0
 
     - name: get previous tag
@@ -59,14 +61,14 @@ jobs:
     - name: build and push to docker with latest version
       uses: docker/build-push-action@v1
       with:
-        image: "${{ github.repository }}-$(. scripts/git/set_docker_image_suffix.sh ${{steps.get_branch.outputs.branch}})"
+        image: "${{ github.repository }}$(. scripts/git/set_docker_image_suffix.sh ${{env.BRANCH}})"
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-        repository: ${{ github.repository }}
+        #repository: ${{ github.repository }}
         tag_with_ref: false
         tag_with_sha: false
         add_git_labels: true
-        tags: latest
+        # tags: latest
         # push: ${{ steps.get_branch.outputs.branch!='master'}}
 
 
