Auto stash before merge of "master" and "origin/master"

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -61,14 +61,13 @@ jobs:
     - name: build and push to docker with latest version
       uses: docker/build-push-action@v1
       with:
-        #image: "${{ github.repository }}$(. scripts/git/set_docker_image_suffix.sh ${{env.BRANCH}})"
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-        repository: "${{ github.repository }}$(. scripts/git/set_docker_image_suffix.sh ${{env.BRANCH}})"
+        repository: ${{ github.repository }}
         tag_with_ref: false
         tag_with_sha: false
         add_git_labels: true
-        # tags: latest
+        tags: "$(. scripts/git/set_docker_image_suffix.sh ${{env.BRANCH}})"
         # push: ${{ steps.get_branch.outputs.branch!='master'}}
 
 
