--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -60,6 +60,8 @@ jobs:
 
     - name: build and push to docker with latest version
       uses: docker/build-push-action@v1
+      env:
+          TAG: $(. scripts/git/set_docker_latest_by_branch.sh ${{env.BRANCH}})
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
@@ -67,7 +69,7 @@ jobs:
         tag_with_ref: false
         tag_with_sha: false
         add_git_labels: true
-        tags: "$(. scripts/git/set_docker_latest_by_branch.sh ${{env.BRANCH}})"
+        tags: ${{TAG}}
         # push: ${{ steps.get_branch.outputs.branch!='master'}}
 
 
