--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -58,10 +58,11 @@ jobs:
         tags: ${{ env.NEXT_TAG }}
         #push: ${{ startsWith(github.ref, 'refs/tags/') }}
 
+    - name: set latest docker tag
+      run: echo ::set-env name=LATEST_DOCKER_TAG::$(. scripts/git/set_docker_latest_by_branch.sh ${{env.BRANCH}})
+
     - name: build and push to docker with latest version
       uses: docker/build-push-action@v1
-      env:
-          LATEST_TAG: "echo $(. scripts/git/set_docker_latest_by_branch.sh ${{env.BRANCH}})"
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
@@ -69,7 +70,7 @@ jobs:
         tag_with_ref: false
         tag_with_sha: false
         add_git_labels: true
-        tags: ${{env.LATEST_TAG}}
+        tags: ${{env.LATEST_DOCKER_TAG}}
         # push: ${{ steps.get_branch.outputs.branch!='master'}}
 
 
