--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,6 +46,9 @@ jobs:
         draft: false
         prerelease: false
 
+    - name: set latest docker tag
+      run: echo ::set-env name=LATEST_DOCKER_TAG::$(. scripts/git/set_docker_latest_by_branch.sh ${{env.BRANCH}})
+
     - name: build and push to docker
       uses: docker/build-push-action@v1
       with:
@@ -55,22 +58,8 @@ jobs:
         tag_with_ref: false
         tag_with_sha: false
         add_git_labels: true
-        tags: ${{ env.NEXT_TAG }}
+        tags: ${{ env.NEXT_TAG }},${{env.LATEST_DOCKER_TAG}}
         #push: ${{ startsWith(github.ref, 'refs/tags/') }}
-
-    - name: set latest docker tag
-      run: echo ::set-env name=LATEST_DOCKER_TAG::$(. scripts/git/set_docker_latest_by_branch.sh ${{env.BRANCH}})
-
-    - name: build and push to docker with latest version
-      uses: docker/build-push-action@v1
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-        repository: ${{ github.repository }}
-        tag_with_ref: false
-        tag_with_sha: false
-        add_git_labels: true
-        tags: ${{env.LATEST_DOCKER_TAG}}
         # push: ${{ steps.get_branch.outputs.branch!='master'}}
 
 
