--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,6 @@
 on: 
-  push:
+  pull_request:
+    types: [closed]
     branches:
       - 'master'
       - 'dev'
@@ -11,6 +12,7 @@ on:
 name: deploy
 jobs:
   deploy:
+    if: github.event.pull_request.merged == true
     name: deploy to cluster
     runs-on: ubuntu-latest
     steps:
